# mycelium

./: .gitignore  AGENTS.md  BENCHMARK_V3.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  antigravity-proxy.sh  install.sh  skills.example.yaml  skills.yaml  test_wc.sh
.playwright-mcp/: page-2026-06-30T07-42-40-038Z.yml
crates/mycelium-app/: Cargo.toml
crates/mycelium-app/src/: daemon.rs  main.rs
crates/mycelium-core/: Cargo.toml
crates/mycelium-core/defaults/: policy.md  safety.json
crates/mycelium-core/src/: brain.rs  cache.rs  error.rs  hot_graph.rs  lib.rs  recall.rs  search.rs  storage.rs  types.rs
crates/mycelium-core/src/self_healing/: audit.rs  chain_monitor.rs  llm_agent.rs  llm_provider.rs  mod.rs  policy.rs  safety.rs  tools.rs
crates/mycelium-core/tests/: brain_annotation.rs  brain_verification.rs  hot_graph_integration.rs  hot_graph_stress.rs  self_healing_tests.rs
crates/mycelium-mcp/: Cargo.toml
crates/mycelium-mcp/src/: main.rs
crates/mycelium-proxy/: Cargo.toml
crates/mycelium-proxy/src/: context_synthesizer.rs  cortex.rs  interceptor.rs  lib.rs  main.rs  query_parser.rs
crates/mycelium-proxy/tests/: cortex_integration_test.rs
crates/mycelium-server/: Cargo.toml
crates/mycelium-server/src/: brain_daemon.rs  brain_handlers.rs  lib.rs  main.rs
crates/mycelium-stream/: Cargo.toml  index.html  tauri.conf.json
crates/mycelium-stream/src/: api.rs  canvas.rs  lib.rs  main.rs  sentinel.rs  state.rs
crates/mycelium-stream/src/components/: alert_feed.rs  mod.rs  pulse_meter.rs  search.rs  stats_panel.rs  timeline.rs
crates/mycelium-web/: Cargo.toml
crates/mycelium-web/src/: lib.rs
crates/mycelium-web/src/components/: mod.rs  sidebar.rs  topbar.rs
crates/mycelium-web/src/views/: artifacts.rs  dashboard.rs  graph.rs  memory.rs  mod.rs  settings.rs  workflows.rs
dicts/: mycelium.dict.zst
docs/: myceliumd-runtime.md
docs/audits/: 2026-06-11-health-baseline.md  2026-06-18-audit-fixes.md  2026-06-18-optimization-audit.md  myceliumd-e2e-audit.md
docs/plans/: 2026-06-11-mycelium-health-fixes.md
docs/superpowers/notes/: 2026-06-25-recall-audit.md  2026-06-25-recall-optimization.md  2026-06-25-recall-proof-report.md  optimization-ideas.md
docs/superpowers/plans/: 2026-06-23-hebbian-crystal-brain.md  2026-06-24-hebbian-brain-llm-transducer.md  2026-06-24-mycelium-stream-plan.md  2026-06-25-graph-guided-recall-plan.md  2026-06-26-audit-execution-plan.md  2026-06-26-cortex-plan.md  2026-06-29-event-native-reactor-plan.md  2026-06-29-self-healing-chain-repair-plan.md  2026-06-29-unified-streaming-graph-plan.md  2026-06-30-audit-synthesis-report.md
docs/superpowers/specs/: 2026-06-23-hebbian-crystal-brain-design.md  2026-06-24-hebbian-brain-llm-transducer-design.md  2026-06-24-mycelium-stream-design.md  2026-06-25-graph-guided-recall-design.md  2026-06-26-cortex-design.md  2026-06-29-event-native-reactor-design.md  2026-06-29-self-healing-chain-repair-design.md  2026-06-29-unified-streaming-graph-design.md  2026-06-30-exproxy-rtk-design.md  2026-06-30-feature-inventory.md
go/: go.mod  go.sum
go/cmd/mcp/: main.go
go/cmd/mycelium/: main.go
go/cmd/myceliumd/: main.go
go/cmd/proxy/: main.go
go/pkg/artifacts/: artifacts.go  artifacts_test.go
go/pkg/backup/: backup.go
go/pkg/brain/: brain.go  lock_unix.go
go/pkg/cache/: cache.go  cache_test.go
go/pkg/cli/: cli.go
go/pkg/daemon/: daemon.go
go/pkg/mcp/: server.go
go/pkg/prompts/: prompts_test.go
go/pkg/proxy/: artifact_tool.go  proxy.go  proxy_test.go  reader_tool.go  tasks.go
go/pkg/reader/: reader.go  reader_test.go
go/pkg/state/: state.go
go/pkg/workflow/: workflow.go
hooks/: install.sh  mycelium-auto-snapshot.sh  post-commit  zsh-echo.sh
legacy/go/go/: go.mod
legacy/python-web-backend/: routes_artifacts.py  routes_core.py  routes_fallback.py  routes_memory.py  routes_reader.py
legacy/python-web-backend/services/: artifact_service.py  memory_service.py  paths_service.py  status_service.py  verify_service.py
legacy/python-web-backend/tests/: test_paths_service.py  test_recall_service.py  test_status_api.py
legacy/scripts/scripts/: append.py  benchmark_report.py  benchmark_v3.py  detect-patterns.py  evolution.py  findings.py  install-myceliumd.sh  migrate_v3.py  mycelium-web  mycelium.py  mycelium_causal.py  mycelium_graph.py  mycelium_inference.py  mycelium_lib.py  mycelium_llm.py  mycelium_negation.py  mycelium_resume_v3.py  mycelium_snapshot.py  myceliumd.py  precheck.py  status-myceliumd.sh  test-myceliumd-e2e.sh  zstd_compress.py
plugin/: README.md  __init__.py  install.sh  plugin.yaml
scripts/: append.py  branch.py  build-mycelium-web.sh  deploy-myceliumd.sh  detect-patterns.py  evolution.py  findings.py  install-mycelium-cli.sh  install-myceliumd.sh  migrate_v3.py  mycelium  mycelium-observatory-service.py  mycelium-observatory-service.sh  mycelium-start  mycelium-web  mycelium.py  mycelium_attention.py  mycelium_bloom.py  mycelium_compact.py  mycelium_graph.py  mycelium_lib.py  mycelium_llm.py  mycelium_lsm.py  mycelium_memory.py  mycelium_resume_v3.py  myceliumd.py  object_store.py  precheck.py  process_backlog.py  start-mycelium-web-backend.sh  start-mycelium-web-frontend.sh  telegram-bot.py
search_index/: meta.json
specs/: api.md
tests/: test_attention.py  test_bloom.py  test_causal.py  test_compact.py  test_evolution.py  test_findings_cli.py  test_graph.py  test_index_parity.py  test_lsm.py  test_migration.py  test_myceliumd.py  test_negation.py  test_object_store.py  test_resume_v3.py  test_snapshot.py  test_zstd.py
web/: README.md  mycelium-stream.html
web/backend/: app.py  models.py  routes_core.py  routes_fallback.py  routes_prompts.py  routes_tasks.py  routes_workflow.py
web/backend/services/: backup_service.py  (+3 more)
web/frontend/: artifact_dashboard.html  global.html  index.html  memory_dashboard.html  package-lock.json  package.json  v3_causal.html  v3_dashboard.html  v3_graph.html  v3_negations.html  vite.config.ts
web/svelte-frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
(+27 files in other folders)
