[workspace]
resolver = "2"
members = [
    "crates/mycelium-core",
    "crates/mycelium-app",
    "crates/mycelium-server",
    "crates/mycelium-proxy",
    "crates/mycelium-mcp",
    "crates/mycelium-web",
    "crates/mycelium-stream",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Azfar Naufal"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
moka = { version = "0.12", features = ["sync"] }
tantivy = "0.22"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
leptos = "0.9.0-alpha"
leptos_axum = "0.9.0-alpha"
leptos_router = "0.9.0-alpha"
