[package]
name = "mycelium"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mycelium"
path = "src/main.rs"

[dependencies]
mycelium-core = { path = "../mycelium-core" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest = { workspace = true, features = ["json"] }
tar = "0.4"
flate2 = "1"
