[package]
name = "mycelium-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
moka.workspace = true
tantivy.workspace = true
uuid.workspace = true
chrono.workspace = true

[lib]
name = "mycelium_core"
path = "src/lib.rs"
