[package]
name = "mycelium-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mycelium-mcp"
path = "src/main.rs"

[dependencies]
mycelium-core = { path = "../mycelium-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
