[package]
name = "mycelium-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mycelium-server"
path = "src/main.rs"

[dependencies]
mycelium-core = { path = "../mycelium-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum = { workspace = true, features = ["tokio"] }
chrono.workspace = true
uuid.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
