[package]
name = "mycelium-stream"
version.workspace = true
edition.workspace = true

[lib]
name = "mycelium_stream"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
leptos.workspace = true
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
wasm-logger = "0.2"
log = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "CanvasGradient", "HtmlCanvasElement", "HtmlElement", "Document", "Window", "Element", "MouseEvent", "CssStyleDeclaration"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
